# shift

./: CMakeLists.txt  README.md  shift.h
test/: CMakeLists.txt  shift_test.cpp
